syntax = "proto3";
package Marketplace.Ordering.Ordering.API;
import "google/protobuf/wrappers.proto";


message UserToken{
  string Token = 1;
}
message User{
  string Id = 1;
  string FirstName = 2;
  string LastName = 3;
  string Role = 4;
  string Email = 5;
}
message Result{
  int32 Code = 1;
  User User = 2;
}

service AuthService{
  rpc ValidateToken(UserToken) returns (Result);
}
